--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "bootstrap": "^4.3.1",
     "draft-js": "^0.10.5",
     "font-awesome": "^4.7.0",
+    "gh-pages": "^2.0.1",
     "rangy": "^1.3.0",
     "react": "^16.8.6",
     "react-dom": "^16.8.6",
@@ -14,6 +15,8 @@
     "reactstrap": "^8.0.0"
   },
   "scripts": {
+    "predeploy": "npm run build",
+    "deploy": "gh-pages -d build",
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
